test/sema/typeck/for/not-iterable-int.dora
fn f() { for _i in 1i32 {} }
